--- a/index.scss
+++ b/index.scss
@@ -7,7 +7,7 @@
 @import "./styles/features.scss";
 @import "./styles/footer.scss";
 @import "./styles/footer_desktop.scss";
-@import "./styles/visitors.scss";
+@import "./styles/audiences.scss";
 @import "./styles/free-trial.scss";
 
 
