--- a/styles/header.scss
+++ b/styles/header.scss
@@ -5,7 +5,7 @@
 
     @include for-large-up {
         background-color: #F3C6BD;
-        min-height: 185px;
+        // min-height: 185px;
     }
 }
 
@@ -25,14 +25,16 @@
         height: 60px;
         margin-right: 15px;
         margin-left: 130px;
-        margin-top: 40px;
+        // margin-top: 40px;
     }
 }
 
 .logo__text {
     @include for-large-up {
-        line-height: 25px;
-        margin-top: 35px;
+        height: 50px;
+        margin-top: 30px; // none
+        // line-height: 25px;
+        // margin-top: 35px;
     }
 }
 
@@ -43,7 +45,7 @@
     color: #2B292D;
 
     @include for-large-up {
-        line-height: 40px;
+        line-height: 0px; //40px
     }
 }
 
@@ -53,6 +55,7 @@
         display: inline-block;
         color: #2B292D;
         opacity: 0.6;
+        margin-top: 15px; //none
     }
 }
 
@@ -61,9 +64,10 @@
     @include for-large-up {
         display: block;
         margin-left: auto;
-        margin-top: 46px;
+        // margin-top: 46px;
         margin-right: 75px;
         width: 273px;
+        line-height: 80px; //none
 
         &__arrow {
             background-image: url('./images/header/arrow.png');
@@ -95,7 +99,7 @@
         border-radius: 2px;
         font-size: 18px;
         font-weight: 700;
-        margin-top: 40px;
+        margin-top: 15px; //40px
         margin-right: 130px;
     }
 }
