--- a/style.css
+++ b/style.css
@@ -675,17 +675,17 @@
   background-color: rgba(0, 161, 198, 0.07);
 }
 
-.title-audiences {
+.title-audience {
   width: 290px;
   margin: 0 auto;
 }
 @media screen and (min-width: 1400px) {
-  .title-audiences {
+  .title-audience {
     width: 1140px;
     margin: 0 auto;
   }
 }
-.title-audiences__head {
+.title-audience__head {
   padding-top: 50px;
   font-weight: bold;
   font-size: 22px;
@@ -693,7 +693,7 @@
   text-align: center;
   color: #2B292D;
 }
-.title-audiences__subtitle {
+.title-audience__subtitle {
   margin-top: 17px;
   font-weight: bold;
   font-size: 40px;
@@ -703,7 +703,7 @@
   color: #2B292D;
 }
 @media screen and (min-width: 1400px) {
-  .title-audiences__subtitle {
+  .title-audience__subtitle {
     width: 555px;
     margin: 0 auto;
     margin-top: 24px;
@@ -711,7 +711,7 @@
     line-height: 56px;
   }
 }
-.title-audiences__description {
+.title-audience__description {
   margin-top: 18px;
   font-size: 24px;
   line-height: 34px;
@@ -719,20 +719,20 @@
   color: #2B292D;
 }
 @media screen and (min-width: 1400px) {
-  .title-audiences__description {
+  .title-audience__description {
     width: 555px;
     margin: 0 auto;
     margin-top: 30px;
   }
 }
 @media screen and (min-width: 1400px) {
-  .title-audiences__actions {
+  .title-audience__actions {
     display: flex;
     justify-content: center;
     margin-bottom: 110px;
   }
 }
-.title-audiences__get-btn {
+.title-audience__get-btn {
   margin-top: 30px;
   background-color: #3040C4;
   color: #fff;
@@ -745,14 +745,14 @@
   border-radius: 2px;
 }
 @media screen and (min-width: 1400px) {
-  .title-audiences__get-btn {
+  .title-audience__get-btn {
     width: 160px;
     height: 48px;
     margin-top: 58px;
     margin-right: 10px;
   }
 }
-.title-audiences__learn-btn {
+.title-audience__learn-btn {
   background-color: #fff;
   color: #000;
   border: none;
@@ -766,7 +766,7 @@
   box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.07);
 }
 @media screen and (min-width: 1400px) {
-  .title-audiences__learn-btn {
+  .title-audience__learn-btn {
     width: 160px;
     height: 48px;
     margin-top: 58px;
