--- a/style.css
+++ b/style.css
@@ -12,6 +12,8 @@
 .header {
   display: flex;
   height: 70px;
+  width: 1140px;
+  margin-left: 130px;
 }
 
 .logo__image {
@@ -26,13 +28,14 @@
     width: 60px;
     height: 60px;
     margin-right: 15px;
-    margin-left: 130px;
+    margin-left: 0;
   }
 }
 
 @media screen and (min-width: 1400px) {
   .logo__text {
     height: 50px;
+    width: 270px;
     margin-top: 30px;
   }
 }
@@ -67,9 +70,9 @@
 @media screen and (min-width: 1400px) {
   .navigation {
     display: block;
-    margin-left: auto;
+    margin-left: 335px;
     margin-right: 75px;
-    width: 273px;
+    width: 305px;
     line-height: 80px;
   }
   .navigation__arrow {
@@ -105,7 +108,6 @@
     font-size: 18px;
     font-weight: 700;
     margin-top: 15px;
-    margin-right: 130px;
   }
 }
 
