--- a/styles/header.scss
+++ b/styles/header.scss
@@ -30,7 +30,7 @@
         width: 60px;
         height: 60px;
         margin-right: 15px;
-        margin-left: 0; //none
+        margin-left: 15px; //none
         // margin-left: 130px;
         // margin-top: 40px;
     }
