--- a/styles/header.scss
+++ b/styles/header.scss
@@ -1,10 +1,12 @@
 .top__section {
     background: #fff;
-    min-width: 320px;
-    min-height: 64px;
+    width: 320px;
+    height: 64px;
+    margin: 0 auto;
 
     @include for-large-up {
         background-color: #F3C6BD;
+        width: 100%;
         // min-height: 185px;
     }
 }
