--- a/styles/header.scss
+++ b/styles/header.scss
@@ -7,6 +7,7 @@
     @include for-large-up {
         background-color: #F3C6BD;
         width: 100%;
+        height: 70px;
         // min-height: 185px;
     }
 }
