--- a/style.css
+++ b/style.css
@@ -45,6 +45,7 @@
     height: 50px;
     width: 200px;
     margin-top: 20px;
+    font-size: 18px;
   }
 }
 
@@ -78,6 +79,7 @@
 @media screen and (min-width: 1400px) {
   .navigation {
     display: block;
+    font-size: 18px;
     margin-left: 335px;
     margin-right: 75px;
     width: 273px;
@@ -116,7 +118,6 @@
     font-size: 18px;
     font-weight: 700;
     margin-top: 10px;
-    margin-right: 5px;
   }
 }
 
