--- a/index.scss
+++ b/index.scss
@@ -14,7 +14,7 @@
 * {
     box-sizing: border-box;
     font-family: 'Work Sans', sans-serif;
-    font-size: 16px;
+    // font-size: 16px;
     color: #2B292D;
     text-decoration: none;
     margin: 0;
