--- a/style.css
+++ b/style.css
@@ -43,9 +43,8 @@
 @media screen and (min-width: 1400px) {
   .logo__text {
     height: 50px;
-    width: 200px;
+    width: 220px;
     margin-top: 20px;
-    font-size: 18px;
   }
 }
 
@@ -68,6 +67,7 @@
   .logo__description {
     display: block;
     color: #2B292D;
+    font-size: 17px;
     opacity: 0.6;
     margin-top: 15px;
   }
@@ -81,8 +81,6 @@
     display: block;
     font-size: 18px;
     margin-left: 335px;
-    margin-right: 75px;
-    width: 273px;
     line-height: 70px;
   }
   .navigation__arrow {
@@ -118,6 +116,7 @@
     font-size: 18px;
     font-weight: 700;
     margin-top: 10px;
+    margin-left: 56px;
   }
 }
 
@@ -989,7 +988,6 @@
 * {
   box-sizing: border-box;
   font-family: "Work Sans", sans-serif;
-  font-size: 16px;
   color: #2B292D;
   text-decoration: none;
   margin: 0;
