--- a/styles/header.scss
+++ b/styles/header.scss
@@ -42,9 +42,8 @@
 .logo__text {
     @include for-large-up {
         height: 50px;
-        width: 200px; //none
+        width: 220px; //none
         margin-top: 20px; // none
-        font-size: 18px;
     }
 }
 
@@ -64,6 +63,7 @@
     @include for-large-up {
         display: block;
         color: #2B292D;
+        font-size: 17px;
         opacity: 0.6;
         margin-top: 15px; //none
     }
@@ -75,8 +75,8 @@
         display: block;
         font-size: 18px;
         margin-left: 335px;
-        margin-right: 75px;
-        width: 273px;  //273px
+        // margin-right: 75px;
+        // width: 273px;
         line-height: 70px; //none
 
         &__arrow {
@@ -110,7 +110,7 @@
         font-size: 18px;
         font-weight: 700;
         margin-top: 10px; //40px
-        // margin-right: 5px;
+        margin-left: 56px;
     }
 }
 
