--- a/style.css
+++ b/style.css
@@ -80,7 +80,8 @@
   .navigation {
     display: block;
     font-size: 18px;
-    margin-left: 335px;
+    margin-left: 300px;
+    width: 305px;
     line-height: 70px;
   }
   .navigation__arrow {
