--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@
 @media screen and (min-width: 1400px) {
   .header {
     width: 1140px;
+    justify-content: space-between;
     margin-left: 130px;
     height: 65px;
   }
@@ -34,7 +35,7 @@
   .logo__image {
     width: 60px;
     height: 60px;
-    margin-right: 15px;
+    margin-right: 13px;
     margin-left: 15px;
     margin-top: 0px;
   }
@@ -80,7 +81,7 @@
   .navigation {
     display: block;
     font-size: 18px;
-    margin-left: 300px;
+    margin-left: 295px;
     width: 305px;
     line-height: 70px;
   }
