--- a/styles/header.scss
+++ b/styles/header.scss
@@ -17,6 +17,7 @@
 
     @include for-large-up {
         width: 1140px;
+        justify-content: space-between;
         margin-left: 130px;
         height: 65px;
     }
@@ -32,7 +33,7 @@
     @include for-large-up {
         width: 60px;
         height: 60px;
-        margin-right: 15px;
+        margin-right: 13px;
         margin-left: 15px; //none
         // margin-left: 130px;
         margin-top: 0px;
@@ -74,7 +75,7 @@
     @include for-large-up {
         display: block;
         font-size: 18px;
-        margin-left: 300px;
+        margin-left: 295px;
         width: 305px;
         line-height: 70px;
 
