--- a/style.css
+++ b/style.css
@@ -79,9 +79,10 @@
 }
 @media screen and (min-width: 1400px) {
   .navigation {
-    display: block;
+    display: flex;
+    justify-content: space-between;
     font-size: 18px;
-    margin-left: 290px;
+    margin-left: 275px;
     width: 305px;
     line-height: 70px;
   }
