--- a/styles/header.scss
+++ b/styles/header.scss
@@ -73,9 +73,10 @@
 .navigation {
     display: none;
     @include for-large-up {
-        display: block;
+        display: flex;
+        justify-content: space-between;
         font-size: 18px;
-        margin-left: 290px;
+        margin-left: 275px;
         width: 305px;
         line-height: 70px;
 
