--- a/styles/header.scss
+++ b/styles/header.scss
@@ -33,10 +33,7 @@
     @include for-large-up {
         width: 60px;
         height: 60px;
-        margin-right: 10px;
-        margin-left: 15px; //none
-        // margin-left: 130px;
-        margin-top: 0px;
+        margin: 0;
     }
 }
 
