--- a/style.css
+++ b/style.css
@@ -35,9 +35,7 @@
   .logo__image {
     width: 60px;
     height: 60px;
-    margin-right: 10px;
-    margin-left: 15px;
-    margin-top: 0px;
+    margin: 0;
   }
 }
 
