--- a/style.css
+++ b/style.css
@@ -775,6 +775,7 @@
   font-size: 18px;
   font-weight: 700;
   margin-top: 15px;
+  margin-bottom: 40px;
   border-radius: 2px;
   box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.07);
 }
@@ -787,7 +788,7 @@
 }
 
 .screen {
-  padding-bottom: 30px;
+  padding-bottom: 15px;
 }
 @media screen and (min-width: 1400px) {
   .screen {
@@ -800,7 +801,7 @@
 }
 .screen__inside {
   margin: 0 auto;
-  margin-top: 40px;
+  margin-bottom: 15px;
   width: 290px;
   height: 300px;
   border-radius: 8px;
