--- a/styles/audience.scss
+++ b/styles/audience.scss
@@ -90,6 +90,7 @@
         font-size: 18px;
         font-weight: 700;
         margin-top: 15px;
+        margin-bottom: 40px;
         border-radius: 2px;
         box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.07);
 
@@ -103,7 +104,7 @@
 
 .screen {
 
-    padding-bottom: 30px;
+    padding-bottom: 15px;
 
     @include for-large-up {
         width: 1140px;
@@ -115,7 +116,7 @@
 
     &__inside {
         margin: 0 auto;
-        margin-top: 40px;
+        margin-bottom: 15px;
         width: 290px;
         height: 300px;
         border-radius: 8px;
