--- a/style.css
+++ b/style.css
@@ -801,6 +801,8 @@
 }
 .screen__inside {
   margin: 0 auto;
+  display: flex;
+  flex-direction: column;
   margin-bottom: 15px;
   width: 290px;
   height: 300px;
