--- a/styles/audience.scss
+++ b/styles/audience.scss
@@ -12,12 +12,16 @@
     }
 
     &__head {
-        padding-top: 100px;
+        padding-top: 50px;
         font-weight: bold;
         font-size: 22px;
         line-height: 34px;
         text-align: center;
         color: #2B292D;
+
+        @include for-large-up {
+            padding-top: 110px;
+        }
     }
 
     &__subtitle {
