--- a/index.scss
+++ b/index.scss
@@ -8,7 +8,7 @@
 @import "./styles/footer.scss";
 @import "./styles/footer_desktop.scss";
 @import "./styles/audience.scss";
-@import "./styles/free-trial.scss";
+@import "./styles/order.scss";
 
 
 * {
