--- a/styles/order.scss
+++ b/styles/order.scss
@@ -15,9 +15,9 @@
     margin: 0 auto; 
 
     @include for-large-up {
-        width: 270px;
-        height: 295px;
-        margin-left: 220px;
+        width: 280px;
+        height: 310px;
+        margin-left: 230px;
     }
 }
 
@@ -28,6 +28,7 @@
 
     @include for-large-up {
         width: 560px;
+        margin-left: 110px;
     }
 /////////////////////////////////////////////
     &__subtitle {
@@ -38,23 +39,23 @@
         color: #2B292D;
         margin-top: 40px;
 
-        @include for-large-up {
-            display: none;
-        }
+        // @include for-large-up {
+        //     display: none;
+        // }
     }
 
-    &__subtitle-desktop {
-        font-weight: bold;
-        font-size: 40px;
-        line-height: 40px;
-        letter-spacing: -0.357143px;
-        color: #2B292D;
-        margin-top: 40px;
+    // &__subtitle-desktop {
+    //     font-weight: bold;
+    //     font-size: 40px;
+    //     line-height: 40px;
+    //     letter-spacing: -0.357143px;
+    //     color: #2B292D;
+    //     margin-top: 40px;
 
-        @include for-large-down {
-            display: none;
-        }
-    }
+    //     @include for-large-down {
+    //         display: none;
+    //     }
+    // }
 /////////////////////////////////////////////////
 /////////////////////////////////////////////////
     &__description {
@@ -63,7 +64,7 @@
         color: #2B292D;
 
         @include for-large-up {
-            display: none;
+            margin-top: 12px;
         }
     }
 
