--- a/style.css
+++ b/style.css
@@ -848,6 +848,8 @@
 @media screen and (min-width: 1400px) {
   .order {
     display: flex;
+    padding-top: 80px;
+    padding-bottom: 80px;
   }
 }
 
@@ -860,8 +862,9 @@
 @media screen and (min-width: 1400px) {
   .logo-img {
     width: 280px;
-    height: 310px;
-    margin-left: 230px;
+    height: 320px;
+    margin-left: 270px;
+    margin-right: 100px;
   }
 }
 
@@ -873,7 +876,7 @@
 @media screen and (min-width: 1400px) {
   .title-order {
     width: 560px;
-    margin-left: 110px;
+    margin-left: 0;
   }
 }
 .title-order__subtitle {
