--- a/style.css
+++ b/style.css
@@ -887,6 +887,11 @@
   color: #2B292D;
   margin-top: 40px;
 }
+@media screen and (min-width: 1400px) {
+  .title-order__subtitle {
+    font-size: 42px;
+  }
+}
 .title-order__description {
   font-size: 24px;
   line-height: 34px;
@@ -895,6 +900,8 @@
 @media screen and (min-width: 1400px) {
   .title-order__description {
     margin-top: 12px;
+    font-size: 26px;
+    width: 580px;
   }
 }
 .title-order__description-desktop {
@@ -914,11 +921,18 @@
   line-height: 22px;
   color: rgba(43, 41, 45, 0.6);
 }
+@media screen and (min-width: 1400px) {
+  .title-order__short-desc {
+    font-size: 16px;
+    width: 600px;
+  }
+}
 
 @media screen and (min-width: 1400px) {
   .title-actions {
     display: flex;
     margin-top: 25px;
+    width: 615px;
   }
 }
 
@@ -934,7 +948,7 @@
 }
 @media screen and (min-width: 1400px) {
   .email {
-    width: 390px;
+    width: 450px;
     margin-right: 10px;
     margin-top: 0;
     margin-bottom: 0;
@@ -953,7 +967,7 @@
 }
 @media screen and (min-width: 1400px) {
   .get-btn {
-    width: 160px;
+    width: 155px;
   }
 }
 
