--- a/styles/header.scss
+++ b/styles/header.scss
@@ -8,7 +8,6 @@
         background-color: #F3C6BD;
         width: 100%;
         height: 64px;
-        // min-height: 185px;
     }
 }
 
@@ -41,8 +40,8 @@
 .logo__text {
     @include for-large-up {
         height: 50px;
-        width: 220px; //none
-        margin-top: 18px; // none
+        width: 220px;
+        margin-top: 18px;
     }
 }
 
@@ -53,7 +52,7 @@
     color: #2B292D;
 
     @include for-large-up {
-        line-height: 3px; //40px
+        line-height: 3px;
     }
 }
 
@@ -64,7 +63,7 @@
         color: #2B292D;
         font-size: 17px;
         opacity: 0.6;
-        margin-top: 15px; //none
+        margin-top: 15px;
     }
 }
 
@@ -108,7 +107,7 @@
         border-radius: 2px;
         font-size: 18px;
         font-weight: 700;
-        margin-top: 9px; //40px
+        margin-top: 9px;
         margin-left: 56px;
     }
 }
